; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_buf.c_net_buf_simple_push.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_buf.c_net_buf_simple_push.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_buf_simple = type { i64, i64 }

@.str = private unnamed_addr constant [14 x i8] c"buf %p len %u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @net_buf_simple_push(%struct.net_buf_simple* %0, i64 %1) #0 {
  %3 = alloca %struct.net_buf_simple*, align 8
  %4 = alloca i64, align 8
  store %struct.net_buf_simple* %0, %struct.net_buf_simple** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.net_buf_simple*, %struct.net_buf_simple** %3, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i32 @NET_BUF_SIMPLE_DBG(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), %struct.net_buf_simple* %5, i64 %6)
  %8 = load %struct.net_buf_simple*, %struct.net_buf_simple** %3, align 8
  %9 = call i64 @net_buf_simple_headroom(%struct.net_buf_simple* %8)
  %10 = load i64, i64* %4, align 8
  %11 = icmp uge i64 %9, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @NET_BUF_SIMPLE_ASSERT(i32 %12)
  %14 = load i64, i64* %4, align 8
  %15 = load %struct.net_buf_simple*, %struct.net_buf_simple** %3, align 8
  %16 = getelementptr inbounds %struct.net_buf_simple, %struct.net_buf_simple* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = sub i64 %17, %14
  store i64 %18, i64* %16, align 8
  %19 = load i64, i64* %4, align 8
  %20 = load %struct.net_buf_simple*, %struct.net_buf_simple** %3, align 8
  %21 = getelementptr inbounds %struct.net_buf_simple, %struct.net_buf_simple* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = add i64 %22, %19
  store i64 %23, i64* %21, align 8
  %24 = load %struct.net_buf_simple*, %struct.net_buf_simple** %3, align 8
  %25 = getelementptr inbounds %struct.net_buf_simple, %struct.net_buf_simple* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = inttoptr i64 %26 to i8*
  ret i8* %27
}

declare dso_local i32 @NET_BUF_SIMPLE_DBG(i8*, %struct.net_buf_simple*, i64) #1

declare dso_local i32 @NET_BUF_SIMPLE_ASSERT(i32) #1

declare dso_local i64 @net_buf_simple_headroom(%struct.net_buf_simple*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
